# M2-synthese

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug_app_orbiter.txt  imgui.ini  premake4.lua
TPs/SYCL-ray-tracing-vs-windows/: SYCL-ray-tracing.sln  SYCL-ray-tracing.vcxproj  SYCL-ray-tracing.vcxproj.filters
TPs/SYCL-ray-tracingCPU-vs-windows/: SYCL-ray-tracing-CPU.sln  SYCL-ray-tracing-CPU.vcxproj  SYCL-ray-tracing-CPU.vcxproj.filters
TPs/TP2/: application_settings.h  application_timer.cpp  application_timer.h  main.cpp  start_camera.txt  tp2.cpp  tp2.h  utils.h
TPs/TP_RT/: CMakeLists.txt  simple.cpp  vector_test.cpp  vector_test.h
TPs/TP_RT/include/: camera.h  color.h  hit_info.h  mat.h  ray.h  render_kernel.h  triangle.h  vec.h  xorshift.h
TPs/TP_RT/source/: color.cpp  main.cpp  mat.cpp  render_kernel.cpp  triangle.cpp
TPs/from_scratch/: application_settings.h  application_state.h  application_timer.cpp  application_timer.h  line.cpp  line.h  main.cpp  shader_custom.glsl  start_camera_minus_z.txt  tp.cpp  tp.h  tp2.cpp  tp2.h  utils.cpp  utils.h
TPs/from_scratch/shaders/: shader_cubemap.glsl  shader_custom.glsl
TPs/tp1/: tuto7_camera.cpp
data/: cornell.mtl  light_camera_bistro.txt  occlusion_culling_demo.mtl  simple_plane.mtl  triangleSamplingScene.blend
data/TPs/: cube_occlusion_culling.mtl  cube_occlusion_culling_2.mtl  cube_occlusion_culling_3.mtl  light_camera_bistro.txt  light_position_cube_plane.txt  start_camera_bistro.txt  test_app_orbiter.txt
data/TPs/irradiance_maps_cache/: DaySkyHDRI015A_4K-HDR.hdr_Irradiance_1048576x.hdr  DaySkyHDRI015A_4K-HDR.hdr_Irradiance_16777216x_Down64x.hdr  DaySkyHDRI015A_4K-HDR.hdr_Irradiance_4194304x.hdr  DaySkyHDRI015A_4K-HDR.hdr_Irradiance_8388608x_Down32x.hdr  (+2 more)
data/shaders/: shader.glsl  tuto_cull.glsl
data/shaders_persos/: shader_custom_color.glsl  shader_from_buffer.glsl  shader_normal.glsl  shader_obj_color.glsl  shader_shaderkit.glsl
data/shaders_tp/: shader_shadow_map.glsl
src/gKit/: app.cpp  app.h  app_camera.cpp  gltf.cpp  mat.cpp  materials.h  mesh.h  orbiter.cpp  orbiter.h  vec.h  wavefront.cpp  window.cpp  window.h
src/imgui/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
tutos/: tuto_cubemap.cpp
tutos/M2/: tuto_cull_export.cpp  tuto_mdi_count.cpp
(+15 files in other folders)
